--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -114,6 +114,31 @@ ion-list {
     transition: background-color 200ms linear;
 }
 
+
+
+.toast-ios .toast-wrapper {
+    left: 10px;
+    right: 10px;
+    margin: auto;
+    border-radius: 0.65rem;
+    position: absolute;
+    z-index: 10;
+    opacity: 8;
+    display: block;
+    max-width: 700px;
+    background: rgba(255, 255, 255, 0.986);
+}
+
+.toast-ios .toast-message {
+    font-size: 1.4rem;
+    color: black;
+    padding: 1.5rem;
+}
+
+.toast-button {
+    color: #063996;
+}
+
 @keyframes float {
     0% {
     
