--- a/src/pages/reg-number-phone/reg-number-phone.scss
+++ b/src/pages/reg-number-phone/reg-number-phone.scss
@@ -79,8 +79,30 @@ page-reg-number-phone {
         -webkit-transition: background-color 200ms linear;
         transition: background-color 200ms linear;
     }
+
+    .item-md {
+        padding-left: 16px;
+        padding-left: 16px;
+        border-radius: 0;
+        position: relative;
+        font-size: 1.7rem;
+        margin-bottom: 1.5%;
+        border-radius: 12px;
+        color: #000;
+        background-color: #fff;
+        -webkit-transition: background-color 200ms linear;
+        transition: background-color 200ms linear;
+    }
     
     .item-ios.item-label-stacked .text-input, .item-ios.item-label-floating .text-input {
+        margin-left: 0;
+        margin-top: 8px;
+        text-align: center;
+        margin-bottom: 8px;
+        width: calc(100% - 8px);
+    }
+
+    .item-md.item-label-stacked .text-input, .item-md.item-label-floating .text-input {
         margin-left: 0;
         margin-top: 8px;
         text-align: center;
@@ -113,6 +135,18 @@ page-reg-number-phone {
         -webkit-transition: background-color 200ms linear;
         transition: background-color 200ms linear;
     }
+
+    .item-md {
+        padding-left: 16px;
+        padding-left: 16px;
+        border-radius: 0;
+        position: relative;
+        font-size: 1.7rem;
+        color: #063996;
+        background-color: #fff;
+        -webkit-transition: background-color 200ms linear;
+        transition: background-color 200ms linear;
+    }
     
     
     
@@ -128,8 +162,25 @@ page-reg-number-phone {
         max-width: 700px;
         background: rgba(255, 255, 255, 0.986);
     }
+    .toast-md .toast-wrapper {
+        left: 10px;
+        right: 10px;
+        margin: auto;
+        border-radius: 0.65rem;
+        position: absolute;
+        z-index: 10;
+        opacity: 8;
+        display: block;
+        max-width: 700px;
+        background: rgba(255, 255, 255, 0.986);
+    }
     
     .toast-ios .toast-message {
+        font-size: 1.4rem;
+        color: black;
+        padding: 1.5rem;
+    }
+    .toast-md .toast-message {
         font-size: 1.4rem;
         color: black;
         padding: 1.5rem;
@@ -170,7 +221,22 @@ page-reg-number-phone {
         transition: background-color 200ms linear;
     }
 
+    .item-md {
+        padding-left: 16px;
+        padding-left: 8px;
+        border-radius: 0;
+        position: relative;
+        font-size: 1.7rem;
+        color: #063996;
+        background-color: #fff;
+        -webkit-transition: background-color 200ms linear;
+        transition: background-color 200ms linear;
+    }
+
     .select-ios {
+        padding: 0;
+    }
+    .select-md {
         padding: 0;
     }
 
@@ -190,4 +256,42 @@ page-reg-number-phone {
         padding: 0;
         width: calc(100% - 8px);
         text-align: center;
+    }
+    .text-input-md {
+        margin: 11px 8px 11px 0;
+        padding: 0;
+        width: calc(100% - 8px);
+        text-align: center;
+    }
+
+    .col {
+        padding: 0px;
+        position: relative;
+        width: 100%;
+        margin: 0;
+        min-height: 1px;
+        -webkit-flex-basis: 0;
+        -ms-flex-preferred-size: 0;
+        flex-basis: 0;
+        -webkit-box-flex: 1;
+        -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+        flex-grow: 1;
+        max-width: 100%;
+    }
+
+    .grid {
+        padding: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
     }
