--- a/src/pages/reg-number-phone/reg-number-phone.scss
+++ b/src/pages/reg-number-phone/reg-number-phone.scss
@@ -123,6 +123,19 @@ page-reg-number-phone {
         -webkit-transition: background-color 200ms linear;
         transition: background-color 200ms linear;
     }
+    .item-md {
+        padding-left: 16px;
+        padding-left: 16px;
+        border-radius: 0;
+        position: relative;
+        font-size: 1.7rem;
+        margin-bottom: 1.5%;
+        border-radius: 12px;
+        color: 063996;
+        background-color: #fff;
+        -webkit-transition: background-color 200ms linear;
+        transition: background-color 200ms linear;
+    }
     
     .item-ios {
         padding-left: 16px;
