--- a/src/pages/reg-number-phone/reg-number-phone.scss
+++ b/src/pages/reg-number-phone/reg-number-phone.scss
@@ -1,4 +1,86 @@
 page-reg-number-phone {
 
+.logo{
+    width: 100%;
+    display: unset;
+}
 
+.item-md2, .item-ios2{
+    background-color: transparent;
+    margin-top: 4%
+}
+
+.item-md2 .item-button2 {
+    padding: 0 0.6em;
+    height: 25px;
+    margin-bottom: 23% !important;
+    font-size: 1.2rem;
+}
+
+.center{
+    margin: auto;
+    text-align: center;
+}
+    
+.vignette {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 200px rgba(0, 0, 0, 0.336) inset;
+}
+
+.logo {
+    width: 70%;
+    background: transparent;
+    height: 80px;
+    margin-top: 10%;
+    display: inline-grid;
+}
+
+.label-md {
+    margin: 0px !important;
+}
+
+.banderaWidt{
+    width: 30% !important;
+}
+
+.inputClass{
+    background: white;
+    border-radius: 5px;
+}
+
+.text-input-md {
+text-align: center !important;
+}
+
+.list-md .item-block .item-inner{
+    border-bottom: 0px solid #dedede !important;
+    }
+    
+.item-md.item-block .item-inner {
+    padding-right: 8px;
+    border-bottom: 0px solid #dedede !important;
+}
+
+.button-md {
+    border-radius: 2px;
+    overflow: hidden;
+    height: 3.6rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: transparent !important  ;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0), 0 3px 1px -2px rgba(0, 0, 0, 0), 0 1px 5px 0 rgba(0, 0, 0, 0) !important;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0), 0 3px 1px -2px rgba(0, 0, 0, 0), 0 1px 5px 0 rgba(0, 0, 0, 0) !important;
+    -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1), background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1), background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0.4rem 0.2rem;
+    padding: 0 1.1em;
+}
 }
