--- a/src/pages/politicas/politicas.scss
+++ b/src/pages/politicas/politicas.scss
@@ -1,3 +1,28 @@
 page-politicas {
+    .imgBackground{  
+        background: #063996;
+     }
 
+     .Titles{
+         color: black;
+         font-weight: bold;
+         font-size: 18px;
+     }
+
+     .textNomral{
+         color: black;
+     }
+
+     .ftBold{
+         font-weight: bold;
+         color: black;
+     }
+
+     .btnStyle {
+        color: white;
+        font-weight: bold;
+        font-size: 14px;
+        width: 32%;
+        height: 34px;
+    }
 }
