--- a/src/pages/modal-transaction/modal-transaction.scss
+++ b/src/pages/modal-transaction/modal-transaction.scss
@@ -1,5 +1,4 @@
 page-modal-transaction {
-
     ion-select {
         max-width: 100% !important;
       }
@@ -42,4 +41,71 @@ page-modal-transaction {
       font-size: 18px;
       }
 
+
+      label, input, select, textarea {
+        font-family: inherit;
+        line-height: normal;
+        font-weight: normal;
+        }
+      .card-content-md {
+        padding: 13px 16px;
+        font-size: 1.4rem;
+        line-height: font;
+        font-weight: bold;
+        font-size: 16px;
+        }
+      .card-md {
+        margin: 10px;
+        border-radius: 15px;
+        width: calc(100% - 20px);
+        font-size: 1.4rem;
+        background: #063996;
+        color: white;
+        -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+      }
+    
+      .item-md {
+        background:transparent !important;
+        padding-left: 16px;
+        padding-right: 0;
+        position: relative;
+        font-size: 1.6rem;
+        font-weight: normal;
+        text-transform: none;
+        color: white;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+        -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+    
+      h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin-top: 1% !important;
+      color: white !important;
+    }
+    
+    .content-md hr {
+      background: white;
+      size: 0.2px;
+      }
+    
+    hr {
+      height: 0.3px;
+      border-width: 0;
+      -webkit-box-sizing: content-box;
+      box-sizing: content-box;
+    }
+
+    .card-header-md {
+        font-size: 1.6rem;
+        color: white;
+        padding: 18px;
+        font-weight: bold;
+        }
 }
