--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,7 +2,16 @@ page-home {
 
    ion-img.img-loaded2 img {
         display: initial !important;
-        width: 60% !important;
+        width: 100% !important;
+    }
+
+    ion-img {
+        display: inline-block;
+        min-width: 100px !important;
+        min-height: 100px !important;
+        background: #eee;
+        contain: strict;
+        
     }
 
     .imgBackground {
