--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -11,3 +11,11 @@
   color: white;
   font-weight: bold;
 }
+
+.alert-md .alert-wrapper {
+  border-radius: 15px;
+  max-width: 280px;
+  background-color: #fafafa;
+  -webkit-box-shadow: 0 16px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 16px 20px rgba(0, 0, 0, 0.4);
+  }
