Design vers Detail hISTORY

--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -57,7 +57,7 @@ page-history {
       }
     
       .item-md {
-        background:transparent !important;
+        background:transparent;
         padding-left: 16px;
         padding-right: 0;
         position: relative;
