--- a/src/pages/transaction/transaction.scss
+++ b/src/pages/transaction/transaction.scss
@@ -59,8 +59,11 @@ page-transaction {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   }
 
+  .txtboldblack{
+    color: black !important;
+    font-weight: bold !important;
+  }
   .item-md {
-    background:transparent !important;
     padding-left: 16px;
     padding-right: 0;
     position: relative;
