--- a/src/pages/recovery-password/recovery-password.scss
+++ b/src/pages/recovery-password/recovery-password.scss
@@ -35,6 +35,10 @@ page-recovery-password {
         margin-top: 10%;
     }
 
+    .divMargin20{
+        margin-top: 20% !important;
+    }
+
     .center{
         margin: auto;
         text-align: center;
