--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -70,4 +70,8 @@ page-history {
         -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
         transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
       }
+
+  ion-select{
+    max-width: 100% !important;
+  }
 }
