--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -3,7 +3,7 @@ page-history {
         margin: 2px 0;
         font-size: 1.4rem;
         font-weight: normal;
-        color: #222;
+        color: #ffffff;
         text-align: center;
     }
 
@@ -73,5 +73,11 @@ page-history {
 
   ion-select{
     max-width: 100% !important;
+  }
+  .card-content-md, .card-content-ios{
+    color: #ffffff;
+  }
+  h6{
+    color: #ffffff;
   }
 }
