--- a/src/pages/history-resume/history-resume.scss
+++ b/src/pages/history-resume/history-resume.scss
@@ -16,7 +16,10 @@ page-history-resume {
   }
 
   [col-6] {
-    text-align: right !important;
+    text-align: right ;
+  }
+  [col-6] {
+    text-align: left !important;
   }
 
   h6:first-child {
@@ -42,6 +45,12 @@ page-history-resume {
     background: #063996 !important;
   }
 
+  label, input, select, textarea {
+    font-weight: bold;
+    font-family: inherit;
+    line-height: normal;
+}
+
   .toolbar-title-md {
     padding: 0 12px;
     font-size: 2rem;
@@ -56,6 +65,7 @@ page-history-resume {
     background: #063996;
   }
 
+
   .item-md {
     background: transparent;
     padding-left: 16px;
@@ -69,5 +79,9 @@ page-history-resume {
     box-shadow: none;
     -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  h2{
+  font-weight: bold;
   }
 }
