--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -10,6 +10,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9569fc', endColorstr='#5974fb', GradientType=1);
   color: white;
   font-weight: bold;
+  border-radius: 8px;
 }
 
 .alert-md .alert-wrapper {
