--- a/src/pages/modal-transaction/modal-transaction.scss
+++ b/src/pages/modal-transaction/modal-transaction.scss
@@ -79,6 +79,7 @@ page-modal-transaction {
     transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
+
   h1,
   h2,
   h3,
@@ -106,5 +107,8 @@ page-modal-transaction {
     color: white;
     padding: 18px;
     font-weight: bold;
+  }
+  .text-input-md, .text-input-ios {
+    border-bottom: 1px solid white;
   }
 }
