--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,6 +21,38 @@
 //  box-shadow: 0 16px 20px rgba(0, 0, 0, 0.4);
 //}
 
+//======================  CSS PARA CAMBIAR LOS COLORES DE LOS ICONOS
+
+.bar-buttons-md {
+  background: transparent !important;
+}
+.ion-md-settings:before {
+  color: rgba(149,105,252,1);
+  color: -moz-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: -webkit-gradient(left top, right top, color-stop(0%, rgba(149,105,252,1)), color-stop(100%, rgba(6,56,150,1)));
+  color: -webkit-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: -o-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: -ms-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: linear-gradient(to right, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9569fc', endColorstr='#063896', GradientType=1 );
+  // color: #424242;
+  background-color: transparent;
+  content: "\f377";
+}
+.bar-button-default-md, .bar-button-clear-md-default, .bar-button-md-default {
+
+
+  color: rgba(149,105,252,1);
+  color: -moz-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: -webkit-gradient(left top, right top, color-stop(0%, rgba(149,105,252,1)), color-stop(100%, rgba(6,56,150,1)));
+  color: -webkit-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: -o-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: -ms-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  color: linear-gradient(to right, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9569fc', endColorstr='#063896', GradientType=1 );
+  // color: #424242;
+  background-color: transparent;
+}
 
 //======================  CSS PARA CAMBIAR LOS DOTS EN EL SPINNER DEL LOADING
 ion-backdrop {
@@ -53,7 +85,8 @@ ion-input, ion-textarea{
   border: 1px black solid;
 }
 //================= PARA EL FOOTER
-.toolbar-background-md {
-  border-color: #f5f5f5;
-  background: #f5f5f5;
-}
+
+
+
+// navbar
+
