--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,7 +9,7 @@ $font-path: "../assets/fonts";
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
-
+@import "animates";
 @import "ionic.globals";
 
 // Shared Variables
