--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,7 @@
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
+      <button ion-item (click)="cerrarSesion()">Cerrar sesión</button>
     </ion-list>
   </ion-content>
 
