--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -1,4 +1,11 @@
 page-account {
+
+    .BackGR3 {
+        background-image: url('../assets/icon/B3.png'); 
+        background-position: center top;
+        background-size: 100%; 
+        background-repeat: no-repeat;
+      }
     .toolbar-background-md {
         border-color: transparent;
         background: rgba(149,105,252,1);
@@ -33,5 +40,38 @@ page-account {
       .bar-button-default-md, .bar-button-clear-md-default, .bar-button-md-default {
         color: white; 
         background: transparent;
+    }
+
+    ion-input, ion-textarea {
+        border: 0.5px #9669fc solid !important;
+        border-radius: 12px !important;
+      }
+      
+      .item-label-stacked .text-input-md, .item-label-floating .text-input-md {
+        margin-left: 0;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        width: calc(100% - 8px);
+        text-align: center;
+    }
+
+    .item-md {
+        padding-left: 16px;
+        padding-right: 0;
+        position: relative;
+        font-size: 1.6rem;
+        font-weight: normal;
+        text-transform: none;
+        color: #000;
+        background: transparent;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+        -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .item-input ion-input, .item-input ion-textarea {
+        position: static;
+        background: white !important;
     }
 }
