--- a/src/pages/modal-transaction/modal-transaction.scss
+++ b/src/pages/modal-transaction/modal-transaction.scss
@@ -2,4 +2,122 @@ page-modal-transaction {
   ion-select {
     max-width: 100% !important;
   }
+
+  button{
+    background: rgba(149,105,252,1);
+  background: -moz-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(149,105,252,1)), color-stop(100%, rgba(89,116,252,1)));
+  background: -webkit-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -o-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -ms-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: linear-gradient(to right, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9569fc', endColorstr='#5974fc', GradientType=1 );
+  }
+
+  .toolbar-background-md {
+    border-color: transparent;
+    background: rgba(149,105,252,1);
+  background: -moz-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(149,105,252,1)), color-stop(100%, rgba(89,116,252,1)));
+  background: -webkit-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -o-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -ms-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: linear-gradient(to right, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9569fc', endColorstr='#5974fc', GradientType=1 );
+  color: white;
+  }
+
+
+  .toolbar-title-md {
+    padding: 0 12px;
+    font-size: 2rem;
+    font-weight: 500;
+    color: white;
+}
+  
+ion-input, ion-textarea {
+  border: 0.5px #9669fc solid !important;
+  border-radius: 12px !important;
+}
+
+.back-button.show-back-button {
+  display: inline-block;
+  background: transparent;
+  color: white;
+}
+
+  
+  .button-small-md {
+    height: 3.1em;
+    font-size: 1.3rem;
+    padding: 0 0.9em;
+  }
+  
+  .btnRadius{
+    border-radius: 14px;
+  }
+  
+  .item-md.item-block .item-inner {
+    padding-right: 8px;
+    border-bottom: 0px solid #dedede !important;
+  }
+
+
+  
+  h4{
+    color: black !important;
+    font-weight: bold !important;
+  }
+  h5,h6{
+    color: black !important;
+  }
+  
+  .BackGR3 {
+    background-image: url('../assets/icon/B3.png'); 
+    background-position: center top;
+    background-size: 100%; 
+    background-repeat: no-repeat;
+  }
+  
+  .item-md.item-block .item-inner {
+    padding-right: 8px;
+    border-bottom: transparent !important;
+  }
+  
+  .label-md[stacked] {
+    font-size: 1.5rem;
+  }
+
+  ion-input, ion-textarea {
+    border: 0.5px #9669fc solid !important;
+    border-radius: 12px !important;
+  }
+  
+  .item-label-stacked .text-input-md, .item-label-floating .text-input-md {
+    margin-left: 0;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    width: calc(100% - 8px);
+    text-align: center;
+}
+
+.item-md {
+    padding-left: 16px;
+    padding-right: 0;
+    position: relative;
+    font-size: 1.6rem;
+    font-weight: normal;
+    text-transform: none;
+    color: #000;
+    background: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-input ion-input, .item-input ion-textarea {
+    position: static;
+    background: white !important;
+}
 }
