--- a/src/pages/security/security.scss
+++ b/src/pages/security/security.scss
@@ -1,3 +1,17 @@
 page-security {
 
+  .btn_show {
+    position: absolute;
+    min-width: 50px;
+    right: 0;
+    top: 41%;
+  }
+
+  .btn_show2 {
+    position: absolute;
+    min-width: 50px;
+    right: 0;
+    top: 42%;
+  }
+
 }
