--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,6 +17,7 @@
       <button ion-item (click)="openPage('MapPage')">{{'MAPA'|translate}}</button>
       <button ion-item (click)="openPage('AccountPage')">{{'MI_CUENTA'|translate}}</button>
       <button ion-item (click)="openPage('SecurityPage')">{{'SEGURIDAD'|translate}}</button>
+      <button ion-item (click)="cerrarSesion()">{{'CERRAR_SESION'|translate}}</button>
     </ion-list>
     <ion-list style="text-align: center">
       <img src="assets/imgs/colombia.png" alt="" (click)="seleccionar('es')" style="max-width: 100px">
