--- a/src/pages/modal-error/modal-error.scss
+++ b/src/pages/modal-error/modal-error.scss
@@ -10,11 +10,8 @@ page-modal-error {
 		text-align: center
 	}
 
-	.scroll-content{
+	.gradient{
 		background: linear-gradient(to right, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
-	}
-	.center-obj{
-		//margin-top: 50%;
 	}
 
 	.footer-button{
