--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -83,3 +83,17 @@ ion-input, ion-textarea{
   border: 1px black solid;
 }
 
+.gradient{
+  background: rgba(149,105,252,1);
+  background: -moz-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(149,105,252,1)), color-stop(100%, rgba(6,56,150,1)));
+  background: -webkit-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  background: -o-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  background: -ms-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+  background: linear-gradient(to right, rgba(149,105,252,1) 0%, rgba(6,56,150,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9569fc', endColorstr='#063896', GradientType=1 );
+}
+
+
+
+
