--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,11 +6,12 @@
   </ion-header>
 
   <ion-content style="background-color: #f5f5f5">
-    <img src="assets/imgs/EPCLogo.png" alt="">
+    <ion-row class="gradient">
+      <ion-col>
+        <img style="width: 60%" src="assets/imgs/EPCLogo.png" alt="">
+      </ion-col>
+    </ion-row>
     <ion-list>
-      <!--<button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">-->
-        <!--{{'p.title'|translate}}-->
-      <!--</button>-->
       <button ion-item (click)="openPage('HomePage')">{{'INICIO'|translate}}</button>
       <button ion-item (click)="openPage('TransactionPage')">{{'TRANSACCION'|translate}}</button>
       <button ion-item (click)="openPage('HistoryPage')">{{'HISTORIAL'|translate}}</button>
@@ -20,8 +21,12 @@
       <button ion-item (click)="cerrarSesion()">{{'CERRAR_SESION'|translate}}</button>
     </ion-list>
     <ion-list style="text-align: center">
-      <img src="assets/imgs/colombia.png" alt="" (click)="seleccionar('es')" style="max-width: 100px">
-      <img src="assets/imgs/usa.png" alt="" (click)="seleccionar('en')" style="max-width: 100px">
+      <ion-item class="center" style="background: transparent; border-top: 0px solid #c8c7cc !important; border-bottom: 0px solid #c8c7cc !important;">
+        <button ion-button  (click)="seleccionar('es')" class="buttonPayCash">Español</button>
+        <button ion-button  (click)="seleccionar('en')" class="buttonPayCash">English</button>
+      </ion-item>
+
+     
     </ion-list>
   </ion-content>
 
