--- a/src/components/msg-error/msg-error.html
+++ b/src/components/msg-error/msg-error.html
@@ -1,1 +1,1 @@
-<div *ngIf="errorMessage !== null">{{errorMessage}}</div>
+<div *ngIf="errorMessage !== null" style="color: white">{{errorMessage}}</div>
