--- a/src/pages/modal-error/modal-error.scss
+++ b/src/pages/modal-error/modal-error.scss
@@ -1,57 +1,61 @@
 page-modal-error {
-	top: 20% !important;
-	left: 10% !important;
-	display: block !important;
-	width: 80% !important;
-	height: 50% !important;
-	border-radius: 25px !important;
+  top: 20% !important;
+  left: 10% !important;
+  display: block !important;
+  width: 80% !important;
+  height: 50% !important;
+  border-radius: 25px !important;
 
-	ion-content{
-		text-align: center
-	}
+  ion-content {
+    text-align: center
+  }
 
-	.gradient{
-		background: linear-gradient(to right, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
-	}
+  .gradient {
+    background: linear-gradient(to right, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
+  }
+  .scroll-content {
+    background-color: transparent;
+  }
+  .footer-button {
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    z-index: 10;
+    display: block;
+    width: 100%;
+  }
 
-	.footer-button{
-		left: 0;
-		bottom: 0;
-		position: absolute;
-		z-index: 10;
-		display: block;
-		width: 100%;
-	}
+  .button-md {
+    border-radius: 2px;
+    overflow: hidden;
+    height: 3.6rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-transform: none;
+    color: black;
+    background-color: white;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1), background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1), background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0.4rem 0.2rem;
+    padding: 0 1.1em;
+  }
 
-	.button-md {
-		border-radius: 2px;
-		overflow: hidden;
-		height: 3.6rem;
-		font-size: 1.4rem;
-		font-weight: 500;
-		text-transform: none;
-		color: black;
-		background-color: white;
-		-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-		-webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
-		transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
-		transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1), background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1);
-		transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1), background-color 300ms cubic-bezier(0.4, 0, 0.2, 1), color 300ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
-		margin: 0.4rem 0.2rem;
-		padding: 0 1.1em;
-	}
+  .button-md.activated {
+    color: blue;
+    background: white;
+  }
 
-	.button-md.activated{
-		color:blue;
-		background: white;
-	}
-
-	.img_background {
-		background-image: url('../assets/backgrounds/fondo_modal.png');
-		background-position: center top;
-		background-size: 80%;
-		background-repeat: no-repeat;
-	}
-
+  .img_background {
+    background-image: url('../assets/backgrounds/fondo_modal.png');
+    background-position: center top;
+    background-size: 80%;
+    background-repeat: no-repeat;
+  }
+  .content-md {
+    background-color: transparent;
+  }
 }
