--- a/src/pages/language/language.scss
+++ b/src/pages/language/language.scss
@@ -14,6 +14,8 @@ page-language {
   .mrgTop{
     margin-top: 60%
   }
+
+  // Botones
   .item-ios.item-block .item-inner, .item-md.item-block .item-inner {
     padding-right: 8px;
     padding-right: 8px;
