--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -16,6 +16,7 @@ page-login {
   .list-md {
     margin: -1px 0 16px;
     padding: 12%;
+    padding-bottom: 0;
   }
 
   .imgBackground {
@@ -42,9 +43,9 @@ page-login {
     display: inline-grid;
   }
 
-  .marginItems {
-    margin-bottom: 10%;
-  }
+  //.marginItems {
+  //  margin-bottom: 10%;
+  //}
 
   // Textos Style
 
