--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -32,4 +32,14 @@ page-register {
   }
   //================   END DE LA CLASE PARA VER LA CONTRASEÑA
 
+  .logo {
+    width: 100%;
+    display: unset;
+  }
+
+  .center {
+	display: block;
+	text-align: center;
+	margin: auto;
+  }
 }
