--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -3,13 +3,19 @@ page-history {
   .imgLogoWidth{
     width: 55%;
   }
+
+  .imgLogoWidthPen{
+    width: 45%;
+  }
 .center{
   margin: auto;
 }
 
 .centerIcoText{
-  text-align: center;
-  margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
 }
 
 .marg4Top{
