--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -86,6 +86,7 @@ page-history {
   font-weight: bold;
   height: 3.2rem;
   line-height: 3rem;
+  font-size: 1.0rem;
   background-color: transparent;
  
 }
