--- a/src/pages/modal-transaction/modal-transaction.scss
+++ b/src/pages/modal-transaction/modal-transaction.scss
@@ -26,7 +26,9 @@ page-modal-transaction {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9569fc', endColorstr='#5974fc', GradientType=1 );
   color: white;
   }
-
+  .backCardsTransp{
+    background: #ffffffe0;
+}
 
   .toolbar-title-md {
     padding: 0 12px;
