--- a/src/pages/history-resume/history-resume.scss
+++ b/src/pages/history-resume/history-resume.scss
@@ -1,4 +1,11 @@
 page-history-resume {
+
+
+    .styleIcospeq{
+        background: transparent;
+        width: 15;
+        height: 15;
+    }
     .BackGR3 {
         background-image: url('../assets/icon/B3.png'); 
         background-position: center top;
