Design Resume History

--- a/src/pages/history-resume/history-resume.scss
+++ b/src/pages/history-resume/history-resume.scss
@@ -46,4 +46,12 @@ page-history-resume {
     background: #ffffffe0;
 }
 
+.mrg1Top{
+    margin-top: 1%;
+}
+
+.mrg10Top{
+    margin-top: 10%;
+}
+
 }
