--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,5 +1,11 @@
 page-profile {
 
+.mrgLogoTopBut{
+	margin-top: 30%;
+	margin-bottom: -24%;
+	width: 70%;
+}
+
 	.BackGRa {
 		background-image: url('../assets/newBackgrounds/6.png'); 
 		background-position: center top;
