ico close section

--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -6,10 +6,11 @@ page-account {
 }
 
 .icoClose{
-    width: 15%;
+    width: 30%;
     padding: 5%;
     position: absolute;
-    margin-left: 21em;
+    margin-left: 18.5em;
+    margin-top: -6%;
 }
     
     .BackgroundPpal{
