--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -44,6 +44,10 @@ page-home {
   margin: auto;
 }
 
+.mar1Left{
+  margin-left: -1%;
+}
+
 .footer-md::before, .tabs-md[tabsPlacement="bottom"] > .tabbar::before {
   top: -2px;
   bottom: auto;
