--- a/src/pages/coins/coins.scss
+++ b/src/pages/coins/coins.scss
@@ -1,3 +1,140 @@
 page-coins {
+    h1 {
+        // margin-top: 2rem;
+        font-size: 2.2rem;
+    }
 
+    p{
+        font-size: 10px;
+        text-align: center;
+    }
+
+    .imgLogoWidthPen{
+        width: 45%;
+    }
+
+    .imgLogoWidth{
+        width: 50%;
+    }
+
+    .imgIcoin{
+        width: 30%;
+    }
+    .marginlogo{
+        margin-top: 2%;
+        margin-left: 2%;
+      }
+
+    .textCoinsmon{
+        text-align: center;
+        margin-top: -24%;
+        margin-left: 0%;
+    }
+    .textSecon{
+        margin-left: -16.5%;
+        margin-top: -3%;
+        color: gray;
+        font-size: 14px !important;
+    }    
+
+    .mrgLeftSegment{
+        margin-left: -45%;
+    }
+    .textTaman{
+        font-size: 14px !important;
+    }
+    .center{
+        margin: auto;
+    }
+
+    .center2 {
+        display: block;
+        text-align: center;
+        margin: auto;
+    }
+
+    .mar1Left{
+        margin-left: -1%;
+    }
+  
+
+    .mrg10Top{
+        margin-top: 9%;
+        font-weight: bold;
+    }
+
+    .brder{
+        border-bottom: 1px solid gray;
+    }
+
+    .colorwhite{
+        color: white;
+        margin-left: 6%;
+    }
+    
+    .BackgroundPpal{
+        background-image: url('../assets/newBackgrounds/9.png'); 
+        background-position: center top;
+        background-size: 100%; 
+        background-repeat: no-repeat;
+    }
+
+    ion-segment {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        width: 30%;
+    }
+    
+      .backSegment{
+        background: rgba(149, 105, 252, 1);
+      background: -moz-linear-gradient(left, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
+      background: -webkit-gradient(left top, right top, color-stop(0%, rgba(149, 105, 252, 1)), color-stop(100%, rgba(89, 116, 251, 1)));
+      background: -webkit-linear-gradient(left, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
+      background: -o-linear-gradient(left, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
+      background: -ms-linear-gradient(left, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
+      background: linear-gradient(to right, rgba(149, 105, 252, 1) 0%, rgba(89, 116, 251, 1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9569fc', endColorstr='#5974fb', GradientType=1);
+      color: white;
+      font-weight: bold;
+      border-radius: 10px;
+      }
+    
+      .segment-button.segment-activated {
+        border-color: transparent !important;
+        opacity: 1;
+        color: white;
+        height: 3.2rem;
+        font-weight: bold;
+    }
+    
+    .segment-md .segment-button.segment-activated {
+      border-color: transparent;
+      opacity: 0.5;
+    }
+    
+    .segment-md .segment-button {
+     
+      opacity: 1;
+      color: white;
+      font-weight: bold;
+      height: 3.2rem;
+      line-height: 3rem;
+      font-size: 1.0rem;
+      background-color: transparent;
+     
+    }
 }
