--- a/src/pages/security/security.scss
+++ b/src/pages/security/security.scss
@@ -15,6 +15,10 @@ page-security {
    margin-left: -8%;
  }
 
+ .martopBtns{
+   margin-top: -4%;
+ }
+
   .item-md {
     padding-left: 16px;
     padding-right: 0;
