New Account Design

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,5 +1,18 @@
 page-profile {
 
+	.icoCenter{
+		width: 20%;
+		position: initial;
+	}
+
+	.mr10Top{
+		margin-top: -10%;
+	}
+
+	.margtop2{
+		margin-top: -2.5%;
+	}
+
 .mrgLogoTopBut{
 	margin-top: 30%;
 	margin-bottom: -24%;
