--- a/src/pages/reg-number-phone/reg-number-phone.scss
+++ b/src/pages/reg-number-phone/reg-number-phone.scss
@@ -1,5 +1,109 @@
 page-reg-number-phone {
 
+.mar3Left{
+  margin-left: 3%;
+}
+
+.Lgo{
+  width: 70%;
+}
+
+.whiteText{
+  color: white;
+}
+
+  .center {
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+
+  .martop20{
+    margin-top: -20%;
+  }
+
+  .mrgtop12{
+    margin-top: -12%;
+  }
+
+  .widflag{
+    width: 90%;
+  }
+
+  .item-md.item-block .item-inner {
+    padding-right: 0px;
+    border-bottom: 0px solid #dedede;
+}
+
+  .flagWid{
+    width: 4.5em;
+  }
+  .heigFlag{
+    height: 2em;
+  }
+
+ .wid120{
+   width: 120%;
+ }
+
+ .marleft8{
+   margin-left: -8%;
+ }
+
+ .marlef3{
+   margin-left: -3%;
+ }
+ .martopBtns{
+   margin-top: -4%;
+ }
+
+  .item-md {
+    padding-left: 16px;
+    padding-right: 0;
+    position: relative;
+    font-size: 1.6rem;
+    font-weight: normal;
+    text-transform: none;
+    color: #000;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+  .btnFlagCountry{
+    width: 40px;
+    height: 40px !important;
+    border-color: transparent;
+    background: rgba(149,105,252,1);
+  background: -moz-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(149,105,252,1)), color-stop(100%, rgba(89,116,252,1)));
+  background: -webkit-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -o-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: -ms-linear-gradient(left, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  background: linear-gradient(to right, rgba(149,105,252,1) 0%, rgba(89,116,252,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9569fc', endColorstr='#5974fc', GradientType=1 );
+  color: white;
+  }
+
+  .marTop24{
+    margin-top: -16%;
+  }
+
+  .backTransp{
+    background: transparent;
+  }
+
+  ion-input, ion-textarea {
+    border: 0.5px #9669fc solid !important;
+    border-radius: 12px !important;
+    background: white;
+  }
+
+
+
+
   .imgBackground {
     background-image: url(http://subirimagen.me/uploads/20180921121235.png);
     background-repeat: initial;
